--- a/src/index.pug
+++ b/src/index.pug
@@ -28,7 +28,7 @@ block content
 					li
 						a(href="tel:81234567890").on-mobile
 							img(src="../images/phone.svg", alt="")
-						a(href="tel:89202624422").on-desktop 8 (920) 262 44 22
+						a(href="tel:89202624422").on-desktop +7 (920) 262 44 22
 					li
 						a(href="https://yandex.ru/maps/8/kursk/house/prospekt_pobedy_50/Z08YdwBhTEIFQFtrfXt5c3VnYA==/?ll=36.171572%2C51.782944&sll=36.192647%2C51.730361&sspn=0.580902%2C0.211273&z=17").on-mobile 
 							img(src="../images/location.svg", alt="")
@@ -47,7 +47,6 @@ block content
 						li Более 500 операций в год
 						li Более 1500 консультаций и УЗИ сосудов в год
 						li Современные методы лечения варикозной болезни
-						li Прием по адресу: Проспект победы, 50, клиника «Мир здоровья»
 						.name__btns
 							a(href="tel:8247835") Позвонить
 							a#write-to-me Написать
@@ -125,10 +124,6 @@ block content
 					.result-slider.slick-slider-1
 						.item
 							.item__picture
-								a(href="../images/results/item1.jpg" data-fancybox="gallery")
-									img(src="../images/results/item1.jpg" alt="")
-						.item
-							.item__picture
 								a(href="../images/results/item2.jpg" data-fancybox="gallery")
 									img(src="../images/results/item2.jpg" alt="")
 						.item
@@ -171,6 +166,10 @@ block content
 							.item__picture
 								a(href="../images/results/item12.jpg" data-fancybox="gallery")
 									img(src="../images/results/item12.jpg" alt="")
+						.item
+							.item__picture
+								a(href="../images/results/item1.jpg" data-fancybox="gallery")
+									img(src="../images/results/item1.jpg" alt="")
 
 
 		section.about-me#anchor4
@@ -308,32 +307,40 @@ block content
 						span.circle-1
 					.reviews-slider.slick-slider-2
 						a.item.review-mini
+							.opacity-wrapper
 							p 10 марта 2020 года удаляла вены на ноге с помощью лазера. Хирург-флеболог Синицын Александр Александрович - высококвалифицированный специалист. Тактичен и внимателен к пациентам. Он в совершенстве знает своё дело. Центр "Мир Здоровья" располагает современным оборудованием, в случае необходимости предложат вам компрессионное бельё. Всем, кому необходима подобная операция, обращайтесь к этому специалисту. Хочу выразить слова искренней благодарности и признательности Синицыну А. А. и всему медперсоналу клиники "Мир Здоровья". З. Горбунова.
-							span.reviews-slider__initials Иванов Петр
+							span.reviews-slider__initials
 						a.item.review-mini
+							.opacity-wrapper
 							p Здравствуйте, делала операцию 24 марта, операцией довольна, удаляли вены лазером. Синицын Александр Александрович - врач с большой буквы. Советую всем, у кого варикозное расширение вен. А доктору хочу пожелать здоровья, сил, терпения. Да, хочу сказать, медперсонал замечательный. Идешь туда с желанием. Спасибо вам большое. Здоровья вам и вашим близким. Хочу отметить, что в клинике [...] мне сказали, что в моем случае операцию ЭКЛК делать нельзя. Однако это не так. Вторую ногу обязательно буду делать в клинике "Мир Здоровья" у доктора Синицына А. А.
-							span.reviews-slider__initials Иванов Петр
+							span.reviews-slider__initials
 						a.item.review-mini
+							.opacity-wrapper
 							p Редко опираюсь на отзывы в интернете, но, к счастью, среди знакомых нашлись те, кто подтвердил, что к Александру можно идти смело. Идти было крайне страшно, так как варикоз у меня был очень запущен и беспокоил меня более 15 лет. Толстые синие страшные вены окутывали всю голень и даже колено, вид настолько кошмарный, что, казалось, проще ногу отрезать, чем что-то там лечить. На приеме сразу стало ясно, что я в надежных руках, и без тени сомнения я согласился на операцию.
-							span.reviews-slider__initials Иванов Петр
+							span.reviews-slider__initials
 						a.item.review-mini
+							.opacity-wrapper
 							p Пишу отзыв, только сняв бинты после операции. Трудно передать эмоции, когда после 15 лет мучений видишь свою аккуратную гладкую, без страшных бугров ногу (небольшие синяки, судя по их виду, пройдут за неделю-две). Операция была 3-й категории сложности. Как волнуется человек перед подобным днём, думаю, никому объяснять не надо, но когда я зашёл в операционную, беспокойство быстро прошло. Сложилось такое ощущение, что мне сейчас не вены будут удалять, а мои старые товарищи пришли ко мне помочь ремонт делать или машину чинить! Настолько душевные доктора и анестезиологи, что продолжать волноваться было просто нереально. Это действительно было менее страшно, чем идти к стоматологу. Зашёл, лёг, заснул, проснулся, иди гуляй. Таким людям, как я, которые тянут до последнего, боятся идти к доктору, предвкушая страшный диагноз, я настоятельно рекомендую, смело идти на приём к Александру! Поверьте, это не страшнее, чем идти к другу за жизнь поболтать. На приеме мне рассказали про вены и операции просто все! Я как будто энциклопедию по венам прослушал. Буду рекомендовать всем, кто страдает от вен, Александра и его коллег!
 							span.reviews-slider__initials
 						a.item.review-mini
+							.opacity-wrapper
 							p Мы очень благодарны Синицыну Александру Александровичу за качественную работу и за его золотые руки. Он оперировал моего сына. Операция прошла успешно, без осложнений.
 							span.reviews-slider__initials
 						a.item.review-mini
+							.opacity-wrapper
 							p Совершенно потрясающий врач. Умеет не только лечить, но и находить с пациентом общий язык. Я абсолютно довольна результатами и очень рада, что попала к Александру Александровичу
 							span.reviews-slider__initials
 						a.item.review-mini
+							.opacity-wrapper
 							p Золотые руки и отзывчивость главные характеристики Александра Александровича. Претензий нет ни к отношению, ни к качеству лечения. Посоветовал сделать лазер, обращалась с варикозом на серьезной стадии. Распрощалась с ужасными венами буквально за несколько сеансов примерно по 40 минут. Быстро, эффективно. Самое главное, что после процедуры можно сразу идти домой. Рекомендую и этого доктора, и лазерное лечение. По-моему, самый лучший вариант в наше время.
 							span.reviews-slider__initials
 						a.item.review-mini
+							.opacity-wrapper
 							p Отзывчивый и внимательный врач. По лечению врач всё объяснил, что, как и почему. В общем, с выбором врача считаю, что не ошиблась. Но ноги я свои запустила и за лечением обратилась поздно. Отеки постоянно, долго если хожу то появляются невыносимые боли. Без операции не обойтись. Но сначала надо сдать анализы. Также после операции придется носить специальное компрессионное белье.
 							span.reviews-slider__initials
 
 
-		section.activities#anchor6
+		section.activities
 			.container
 				//- .activities__circle
 				//- 	span.circle-1
@@ -413,7 +420,7 @@ block content
 
 
 
-	footer.main-footer
+	footer.main-footer#anchor6
 		.container
 			.main-footer__wrapper
 				ul.main-footer__list
@@ -423,7 +430,7 @@ block content
 				ul.main-footer__list
 					li.main-footer__list-title Номер
 					li.main-footer__list-item 
-						a(href="tel:89202624422") 8 (920) 262 44 22
+						a(href="tel:89202624422") +7 (920) 262 44 22
 				ul.main-footer__list
 					li.main-footer__list-title 
 						span.main-footer__social-title Социальные сети
@@ -466,26 +473,26 @@ block content
 	#overlay-review
 		#popup-review
 			.review-big
-				p 10 марта 2020 года удаляла вены на ноге с помощью лазера. Хирург-флеболог Синицын Александр Александрович - высококвалифицированный специалист. Тактичен и внимателен к пациентам. Он в совершенстве знает своё дело. Центр "Мир Здоровья" располагает современным оборудованием, в случае необходимости предложат вам компрессионное бельё. Всем, кому необходима подобная операция, обращайтесь к этому специалисту. Хочу выразить слова искренней благодарности и признательности Синицыну А. А. и всему медперсоналу клиники "Мир Здоровья". З. Горбунова.
-				span.reviews-slider__initials Иванов Петр
+				p.review-big__content 10 марта 2020 года удаляла вены на ноге с помощью лазера. Хирург-флеболог Синицын Александр Александрович - высококвалифицированный специалист. Тактичен и внимателен к пациентам. Он в совершенстве знает своё дело. Центр "Мир Здоровья" располагает современным оборудованием, в случае необходимости предложат вам компрессионное бельё. Всем, кому необходима подобная операция, обращайтесь к этому специалисту. Хочу выразить слова искренней благодарности и признательности Синицыну А. А. и всему медперсоналу клиники "Мир Здоровья". З. Горбунова.
+				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/").reviews-slider__initials https://prodoctorov.ru/kursk/vrach/57245-sinicyn/
 			.review-big
-				p Здравствуйте, делала операцию 24 марта, операцией довольна, удаляли вены лазером. Синицын Александр Александрович - врач с большой буквы. Советую всем, у кого варикозное расширение вен. А доктору хочу пожелать здоровья, сил, терпения. Да, хочу сказать, медперсонал замечательный. Идешь туда с желанием. Спасибо вам большое. Здоровья вам и вашим близким. Хочу отметить, что в клинике [...] мне сказали, что в моем случае операцию ЭКЛК делать нельзя. Однако это не так. Вторую ногу обязательно буду делать в клинике "Мир Здоровья" у доктора Синицына А. А.
-				span.reviews-slider__initials Иванов Петр
+				p.review-big__content Здравствуйте, делала операцию 24 марта, операцией довольна, удаляли вены лазером. Синицын Александр Александрович - врач с большой буквы. Советую всем, у кого варикозное расширение вен. А доктору хочу пожелать здоровья, сил, терпения. Да, хочу сказать, медперсонал замечательный. Идешь туда с желанием. Спасибо вам большое. Здоровья вам и вашим близким. Хочу отметить, что в клинике [...] мне сказали, что в моем случае операцию ЭКЛК делать нельзя. Однако это не так. Вторую ногу обязательно буду делать в клинике "Мир Здоровья" у доктора Синицына А. А.
+				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/").reviews-slider__initials https://prodoctorov.ru/kursk/vrach/57245-sinicyn/
 			.review-big
-				p Редко опираюсь на отзывы в интернете, но, к счастью, среди знакомых нашлись те, кто подтвердил, что к Александру можно идти смело. Идти было крайне страшно, так как варикоз у меня был очень запущен и беспокоил меня более 15 лет. Толстые синие страшные вены окутывали всю голень и даже колено, вид настолько кошмарный, что, казалось, проще ногу отрезать, чем что-то там лечить. На приеме сразу стало ясно, что я в надежных руках, и без тени сомнения я согласился на операцию.
-				span.reviews-slider__initials Иванов Петр
+				p.review-big__content Редко опираюсь на отзывы в интернете, но, к счастью, среди знакомых нашлись те, кто подтвердил, что к Александру можно идти смело. Идти было крайне страшно, так как варикоз у меня был очень запущен и беспокоил меня более 15 лет. Толстые синие страшные вены окутывали всю голень и даже колено, вид настолько кошмарный, что, казалось, проще ногу отрезать, чем что-то там лечить. На приеме сразу стало ясно, что я в надежных руках, и без тени сомнения я согласился на операцию.
+				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/").reviews-slider__initials https://prodoctorov.ru/kursk/vrach/57245-sinicyn/
 			.review-big
-				p Пишу отзыв, только сняв бинты после операции. Трудно передать эмоции, когда после 15 лет мучений видишь свою аккуратную гладкую, без страшных бугров ногу (небольшие синяки, судя по их виду, пройдут за неделю-две). Операция была 3-й категории сложности. Как волнуется человек перед подобным днём, думаю, никому объяснять не надо, но когда я зашёл в операционную, беспокойство быстро прошло. Сложилось такое ощущение, что мне сейчас не вены будут удалять, а мои старые товарищи пришли ко мне помочь ремонт делать или машину чинить! Настолько душевные доктора и анестезиологи, что продолжать волноваться было просто нереально. Это действительно было менее страшно, чем идти к стоматологу. Зашёл, лёг, заснул, проснулся, иди гуляй. Таким людям, как я, которые тянут до последнего, боятся идти к доктору, предвкушая страшный диагноз, я настоятельно рекомендую, смело идти на приём к Александру! Поверьте, это не страшнее, чем идти к другу за жизнь поболтать. На приеме мне рассказали про вены и операции просто все! Я как будто энциклопедию по венам прослушал. Буду рекомендовать всем, кто страдает от вен, Александра и его коллег!
-				span.reviews-slider__initials Иванов Петр			
+				p.review-big__content Пишу отзыв, только сняв бинты после операции. Трудно передать эмоции, когда после 15 лет мучений видишь свою аккуратную гладкую, без страшных бугров ногу (небольшие синяки, судя по их виду, пройдут за неделю-две). Операция была 3-й категории сложности. Как волнуется человек перед подобным днём, думаю, никому объяснять не надо, но когда я зашёл в операционную, беспокойство быстро прошло. Сложилось такое ощущение, что мне сейчас не вены будут удалять, а мои старые товарищи пришли ко мне помочь ремонт делать или машину чинить! Настолько душевные доктора и анестезиологи, что продолжать волноваться было просто нереально. Это действительно было менее страшно, чем идти к стоматологу. Зашёл, лёг, заснул, проснулся, иди гуляй. Таким людям, как я, которые тянут до последнего, боятся идти к доктору, предвкушая страшный диагноз, я настоятельно рекомендую, смело идти на приём к Александру! Поверьте, это не страшнее, чем идти к другу за жизнь поболтать. На приеме мне рассказали про вены и операции просто все! Я как будто энциклопедию по венам прослушал. Буду рекомендовать всем, кто страдает от вен, Александра и его коллег!
+				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/").reviews-slider__initials https://prodoctorov.ru/kursk/vrach/57245-sinicyn/		
 			.review-big
-				p Мы очень благодарны Синицыну Александру Александровичу за качественную работу и за его золотые руки. Он оперировал моего сына. Операция прошла успешно, без осложнений.
-				span.reviews-slider__initials Иванов Петр			
+				p.review-big__content Мы очень благодарны Синицыну Александру Александровичу за качественную работу и за его золотые руки. Он оперировал моего сына. Операция прошла успешно, без осложнений.
+				a(href="https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich").reviews-slider__initials https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich
 			.review-big
-				p Совершенно потрясающий врач. Умеет не только лечить, но и находить с пациентом общий язык. Я абсолютно довольна результатами и очень рада, что попала к Александру Александровичу
-				span.reviews-slider__initials Иванов Петр			
+				p.review-big__content Совершенно потрясающий врач. Умеет не только лечить, но и находить с пациентом общий язык. Я абсолютно довольна результатами и очень рада, что попала к Александру Александровичу
+				a(href="https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich").reviews-slider__initials https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich
 			.review-big
-				p Золотые руки и отзывчивость главные характеристики Александра Александровича. Претензий нет ни к отношению, ни к качеству лечения. Посоветовал сделать лазер, обращалась с варикозом на серьезной стадии. Распрощалась с ужасными венами буквально за несколько сеансов примерно по 40 минут. Быстро, эффективно. Самое главное, что после процедуры можно сразу идти домой. Рекомендую и этого доктора, и лазерное лечение. По-моему, самый лучший вариант в наше время.
-				span.reviews-slider__initials Иванов Петр			
+				p.review-big__content Золотые руки и отзывчивость главные характеристики Александра Александровича. Претензий нет ни к отношению, ни к качеству лечения. Посоветовал сделать лазер, обращалась с варикозом на серьезной стадии. Распрощалась с ужасными венами буквально за несколько сеансов примерно по 40 минут. Быстро, эффективно. Самое главное, что после процедуры можно сразу идти домой. Рекомендую и этого доктора, и лазерное лечение. По-моему, самый лучший вариант в наше время.
+				a(href="https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/").reviews-slider__initials https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/
 			.review-big
-				p Отзывчивый и внимательный врач. По лечению врач всё объяснил, что, как и почему. В общем, с выбором врача считаю, что не ошиблась. Но ноги я свои запустила и за лечением обратилась поздно. Отеки постоянно, долго если хожу то появляются невыносимые боли. Без операции не обойтись. Но сначала надо сдать анализы. Также после операции придется носить специальное компрессионное белье.
-				span.reviews-slider__initials Иванов Петр
+				p.review-big__content Отзывчивый и внимательный врач. По лечению врач всё объяснил, что, как и почему. В общем, с выбором врача считаю, что не ошиблась. Но ноги я свои запустила и за лечением обратилась поздно. Отеки постоянно, долго если хожу то появляются невыносимые боли. Без операции не обойтись. Но сначала надо сдать анализы. Также после операции придется носить специальное компрессионное белье.
+				a(href="https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/").reviews-slider__initials https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/
