--- a/src/scss/blocks/_reviews-slider.scss
+++ b/src/scss/blocks/_reviews-slider.scss
@@ -1,45 +1,61 @@
 .reviews-slider {
-  padding: 0 60px;
-  position: relative;
-  z-index: 3;
-  .item {
-    padding: 30px 20px;
-    background-color: white;
-    border-radius: 5px;
-    position: relative;
-    z-index: 20;
-    color: #717171;
-    font-size: 17px;
-    overflow: hidden;
-    cursor: pointer;
-    height: 220px;
+	padding: 0 60px;
+	position: relative;
+	z-index: 3;
 
-  }
-  .slick-dots {
-    margin-left: -75px;
-    @media (max-width: 576px) {
-      margin-left: 0;
-    }
-  }
-  .slick-slide {
-    padding-right: 30px;
-    @media (max-width: 576px) {
-      padding: 0;
-    }
-  }
-  @media (max-width: 576px) {
-    padding: 0;
-  }
+	.item {
+		padding: 30px 20px;
+		background-color: white;
+		border-radius: 5px;
+		position: relative;
+		z-index: 10;
+		color: #717171;
+		font-size: 17px;
+		overflow: hidden;
+		cursor: pointer;
+		height: 220px;
+		display: flex !important;
+		flex-direction: column;
+
+		.opacity-wrapper {
+      position: absolute;
+      z-index: 20;
+			width: 100%;
+      height: 100%;
+      background: linear-gradient(180deg, transparent 60%, #fff 80%);
+		}
+	}
+
+	.slick-dots {
+		margin-left: -75px;
+
+		@media (max-width: 576px) {
+			margin-left: 0;
+		}
+	}
+
+	.slick-slide {
+		padding-right: 30px;
+
+		@media (max-width: 576px) {
+			padding: 0;
+		}
+	}
+
+	@media (max-width: 576px) {
+		padding: 0;
+	}
 }
 
 .reviews-slider__initials {
-  font-size: 17px;
-  font-weight: 600;
-  color: $color-dark-blue;
-  display: block;
-  text-align: right;
-  margin-top: 15px;
-  @media (max-width: 576px) {
-    font-size: 16px;
-  }
+	font-size: 17px;
+	font-weight: 600;
+	color: $color-dark-blue;
+	display: block;
+	text-align: right;
+	margin-top: auto;
+
+	@media (max-width: 576px) {
+		font-size: 16px;
+	}
 }
