--- a/src/scss/blocks/_certificats-slider.scss
+++ b/src/scss/blocks/_certificats-slider.scss
@@ -5,6 +5,6 @@
         z-index: 999;
         display: flex !important;
         justify-content: center;
-        padding-right: 20px;
+        // padding-right: 20px;
     }
 }
