--- a/src/scss/blocks/_direction.scss
+++ b/src/scss/blocks/_direction.scss
@@ -67,6 +67,7 @@
 	flex-direction: column;
 	.link {
 		color: $color-dark-blue;
+		text-decoration: underline;
 	}
 	@media (max-width: 992px) {
 		flex-direction: column;
@@ -190,6 +191,7 @@
 	color: $color-dark-blue;
 	@media (max-width: 576px) {
 		margin-left: 10px;
+		font-size: 17px;
 	}
 }
 
