--- a/src/scss/blocks/_name.scss
+++ b/src/scss/blocks/_name.scss
@@ -185,9 +185,9 @@
 		}
 
 		&:hover {
-			border: 2px solid $color-dark-blue;
+			border: 2px solid $color-red;
 			transition: 0.3s;
-			color: $color-dark-blue;
+			color: $color-red;
 			background-color: #fff;
 		}
 
