--- a/src/scss/blocks/_about-me.scss
+++ b/src/scss/blocks/_about-me.scss
@@ -62,6 +62,15 @@
 	margin-bottom: 20px;
 	p {
 		margin-bottom: 10px;
+		&.indent {
+			text-indent: 20px;
+		}
+		a {
+			color: $color-dark-blue;
+			&:hover {
+				color: $color-red;
+			}
+		}
 	}
 	ul {
 		margin-bottom: 20px;
