--- a/src/scss/blocks/_direction.scss
+++ b/src/scss/blocks/_direction.scss
@@ -68,6 +68,11 @@
 	.link {
 		color: $color-dark-blue;
 		text-decoration: underline;
+		position: relative;
+		z-index: 100;
+		&:hover {
+			color: $color-red;
+		}
 	}
 	@media (max-width: 992px) {
 		flex-direction: column;
@@ -95,9 +100,28 @@
 }
 
 .direction__top {
+	position: relative;
 	display: flex;
 	align-items: center;
 	margin-bottom: 30px;
+	@media (max-width: 768px) {
+		&::after {
+			content: "";
+			position: absolute;
+			background-image: url("../images/arrow-btn.svg");
+			background-repeat: no-repeat;
+			right: 20px;
+			top: 50%;
+			width: 20px;
+			height: 20px;
+			transform: translateY(-50%);
+		}
+		&.active {
+			&::after {
+				transform: rotate(90deg);
+			}
+		}
+	}
 
 	&.active {
 		margin-bottom: 20px;
