--- a/src/scss/blocks/_mobile-menu.scss
+++ b/src/scss/blocks/_mobile-menu.scss
@@ -17,7 +17,7 @@
         color: $color-dark-blue;
         font-weight: 600;
         &:hover {
-            opacity: 0.75;
+            color: $color-red;
             transition: all 0.3s;
         }
     }
@@ -33,24 +33,6 @@
         background-image: url("../images/cross.svg");
         background-repeat: no-repeat;
         background-size: cover;
-        // span {
-        //     // width: 20px;
-        //     height: 3px;
-        //     display: block;
-        //     position: absolute;
-        //     background-color: $color-dark-blue;
-        //     border-radius: 6px;
-        //     cursor: pointer;
-        //     &:first-child {
-        //         top: 0px;
-        //         left: 0;
-        //         transform: rotate(45deg);
-        //     }
-        //     &:last-child {
-        //         bottom: 5pxpx;
-        //         left: 0;
-        //         transform: rotate(-45deg);
-        //     }
-        // }
+        cursor: pointer;
     }
 }
