--- a/src/scss/blocks/_popup.scss
+++ b/src/scss/blocks/_popup.scss
@@ -29,6 +29,7 @@
 	font-size: 20px;
 	font-weight: 600;
 
+
 	.main-footer__social {
 		padding-top: 20px;
 	}
@@ -37,6 +38,8 @@
 		display: none;
 		font-size: 18px;
 		font-weight: 400;
+		overflow: hidden;
+
 
 		&.active {
 			display: block;
