--- a/src/scss/blocks/_reviews-slider.scss
+++ b/src/scss/blocks/_reviews-slider.scss
@@ -18,11 +18,13 @@
 		flex-direction: column;
 
 		.opacity-wrapper {
-      position: absolute;
-      z-index: 20;
+			position: absolute;
+			top: 0;
+			left: 0;
+			z-index: 20;
 			width: 100%;
-      height: 100%;
-      background: linear-gradient(180deg, transparent 60%, #fff 80%);
+			height: 100%;
+			background: linear-gradient(180deg, transparent 60%, #fff 95%);
 		}
 	}
 
@@ -47,7 +49,7 @@
 	}
 }
 
-.reviews-slider__initials {
+.reviews-slider__link {
 	font-size: 17px;
 	font-weight: 600;
 	color: $color-dark-blue;
