--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,6 @@ append vars
 
 block content
 
-
 	header.main-header#anchor1
 		.container
 			nav.main-nav
@@ -27,9 +26,9 @@ block content
 				.main-nav__inner
 					ul.main-nav__contacts
 						li
-							a(href="tel:81234567890").on-mobile.phone
+							a(href="tel:+79202624422").on-mobile.phone
 								//- img(src="../images/phone.svg" alt="")
-							a(href="tel:89202624422").on-desktop +7 (920) 262 44 22
+							a(href="tel:+79202624422").on-desktop +7 (920) 262 44 22
 						li
 							a(href="https://yandex.ru/maps/8/kursk/?ll=36.171572%2C51.782944&mode=search&oid=1288060211&ol=biz&sll=36.171572%2C51.782941&sspn=0.005311%2C0.002243&text=%D0%BF%D1%80%D0%BE%D1%81%D0%BF%D0%B5%D0%BA%D1%82%20%D0%BF%D0%BE%D0%B1%D0%B5%D0%B4%D1%8B%2050%20%D0%BC%D0%B8%D1%80%20%D0%B7%D0%B4%D0%BE%D1%80%D0%BE%D0%B2%D1%8C%D1%8F&z=16").on-mobile.location
 								//- img(src="../images/location.svg" alt="")
@@ -59,7 +58,7 @@ block content
 						li Более 1500 консультаций и УЗИ сосудов в год
 						li Современные методы лечения варикозной болезни
 						.name__btns
-							a(href="tel:8247835") Позвонить
+							a(href="tel:+79202624422") Позвонить
 							a#write-to-me Написать
 					.name__photo
 						.name__photo-pic
@@ -231,7 +230,6 @@ block content
 										li Посттромботическая болезнь нижних конечностей
 										li Венозные трофические язвы
 										li Лечение венозных и лимфатических отеков
-										li Консультация флеболога
 									b Действующие сертификаты
 									ul.about-me__list
 										li Сердечно-сосудистая хирургия
@@ -440,13 +438,13 @@ block content
 				ul.main-footer__list
 					li.main-footer__list-title Телефон для записи:
 					li.main-footer__list-item 
-						a(href="tel:89202624422") +7 (920) 262 44 22
+						a(href="tel:+79202624422") +7 (920) 262 44 22
 				ul.main-footer__list
 					li.main-footer__list-title Электронная почта:
 					li.main-footer__list-item
 						a(href="mailto:flebolog.sinitsyn@yandex.ru") flebolog.sinitsyn@yandex.ru
 				ul.main-footer__list
-					li.main-footer__list-title 
+					li.main-footer__list-title.main-footer__list-title--social
 						span.main-footer__social-title Социальные сети:
 						ul.main-footer__social
 							li
@@ -492,25 +490,25 @@ block content
 		#popup-review
 			.review-big
 				p.review-big__content 10 марта 2020 года удаляла вены на ноге с помощью лазера. Хирург-флеболог Синицын Александр Александрович - высококвалифицированный специалист. Тактичен и внимателен к пациентам. Он в совершенстве знает своё дело. Центр "Мир Здоровья" располагает современным оборудованием, в случае необходимости предложат вам компрессионное бельё. Всем, кому необходима подобная операция, обращайтесь к этому специалисту. Хочу выразить слова искренней благодарности и признательности Синицыну А. А. и всему медперсоналу клиники "Мир Здоровья". З. Горбунова.
-				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/").reviews-slider__link https://prodoctorov.ru/kursk/vrach/57245-sinicyn/
+				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/" target="_blank").reviews-slider__link Посмотреть отзыв
 			.review-big
 				p.review-big__content Здравствуйте, делала операцию 24 марта, операцией довольна, удаляли вены лазером. Синицын Александр Александрович - врач с большой буквы. Советую всем, у кого варикозное расширение вен. А доктору хочу пожелать здоровья, сил, терпения. Да, хочу сказать, медперсонал замечательный. Идешь туда с желанием. Спасибо вам большое. Здоровья вам и вашим близким. Хочу отметить, что в клинике [...] мне сказали, что в моем случае операцию ЭКЛК делать нельзя. Однако это не так. Вторую ногу обязательно буду делать в клинике "Мир Здоровья" у доктора Синицына А. А.
-				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/").reviews-slider__link https://prodoctorov.ru/kursk/vrach/57245-sinicyn/
+				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/" target="_blank").reviews-slider__link Посмотреть отзыв
 			.review-big
 				p.review-big__content Редко опираюсь на отзывы в интернете, но, к счастью, среди знакомых нашлись те, кто подтвердил, что к Александру можно идти смело. Идти было крайне страшно, так как варикоз у меня был очень запущен и беспокоил меня более 15 лет. Толстые синие страшные вены окутывали всю голень и даже колено, вид настолько кошмарный, что, казалось, проще ногу отрезать, чем что-то там лечить. На приеме сразу стало ясно, что я в надежных руках, и без тени сомнения я согласился на операцию.
-				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/").reviews-slider__link https://prodoctorov.ru/kursk/vrach/57245-sinicyn/
+				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/" target="_blank").reviews-slider__link Посмотреть отзыв
 			.review-big
 				p.review-big__content Пишу отзыв, только сняв бинты после операции. Трудно передать эмоции, когда после 15 лет мучений видишь свою аккуратную гладкую, без страшных бугров ногу (небольшие синяки, судя по их виду, пройдут за неделю-две). Операция была 3-й категории сложности. Как волнуется человек перед подобным днём, думаю, никому объяснять не надо, но когда я зашёл в операционную, беспокойство быстро прошло. Сложилось такое ощущение, что мне сейчас не вены будут удалять, а мои старые товарищи пришли ко мне помочь ремонт делать или машину чинить! Настолько душевные доктора и анестезиологи, что продолжать волноваться было просто нереально. Это действительно было менее страшно, чем идти к стоматологу. Зашёл, лёг, заснул, проснулся, иди гуляй. Таким людям, как я, которые тянут до последнего, боятся идти к доктору, предвкушая страшный диагноз, я настоятельно рекомендую, смело идти на приём к Александру! Поверьте, это не страшнее, чем идти к другу за жизнь поболтать. На приеме мне рассказали про вены и операции просто все! Я как будто энциклопедию по венам прослушал. Буду рекомендовать всем, кто страдает от вен, Александра и его коллег!
-				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/").reviews-slider__link https://prodoctorov.ru/kursk/vrach/57245-sinicyn/		
+				a(href="https://prodoctorov.ru/kursk/vrach/57245-sinicyn/" target="_blank").reviews-slider__link Посмотреть отзыв
 			.review-big
 				p.review-big__content Мы очень благодарны Синицыну Александру Александровичу за качественную работу и за его золотые руки. Он оперировал моего сына. Операция прошла успешно, без осложнений.
-				a(href="https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich").reviews-slider__link https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich
+				a(href="https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich" target="_blank").reviews-slider__link Посмотреть отзыв
 			.review-big
 				p.review-big__content Совершенно потрясающий врач. Умеет не только лечить, но и находить с пациентом общий язык. Я абсолютно довольна результатами и очень рада, что попала к Александру Александровичу
-				a(href="https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich").reviews-slider__link https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich
+				a(href="https://doctu.ru/kursk/doctor/sinicyn-aleksandr-aleksandrovich" target="_blank").reviews-slider__link Посмотреть отзыв
 			.review-big
 				p.review-big__content Золотые руки и отзывчивость главные характеристики Александра Александровича. Претензий нет ни к отношению, ни к качеству лечения. Посоветовал сделать лазер, обращалась с варикозом на серьезной стадии. Распрощалась с ужасными венами буквально за несколько сеансов примерно по 40 минут. Быстро, эффективно. Самое главное, что после процедуры можно сразу идти домой. Рекомендую и этого доктора, и лазерное лечение. По-моему, самый лучший вариант в наше время.
-				a(href="https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/").reviews-slider__link https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/
+				a(href="https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/" target="_blank").reviews-slider__link Посмотреть отзыв
 			.review-big
 				p.review-big__content Отзывчивый и внимательный врач. По лечению врач всё объяснил, что, как и почему. В общем, с выбором врача считаю, что не ошиблась. Но ноги я свои запустила и за лечением обратилась поздно. Отеки постоянно, долго если хожу то появляются невыносимые боли. Без операции не обойтись. Но сначала надо сдать анализы. Также после операции придется носить специальное компрессионное белье.
-				a(href="https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/").reviews-slider__link https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/
+				a(href="https://kursk.zoon.ru/p-doctor/aleksandr_aleksandrovich_sinitsyn/" target="_blank").reviews-slider__link Посмотреть отзыв
