--- a/src/scss/blocks/_about-me.scss
+++ b/src/scss/blocks/_about-me.scss
@@ -28,7 +28,7 @@
 	width: 480px;
 	float: left;
 	@media (max-width: 992px) {
-		margin-right: 0;
+		// margin-right: 0;
 		flex: auto;
 	}
 	@media (max-width: 576px) {
@@ -68,7 +68,9 @@
 		a {
 			color: $color-dark-blue;
 			&:hover {
-				color: $color-red;
+				@media (min-width: 768px) {
+					color: $color-red;
+				}
 			}
 		}
 	}
