--- a/src/scss/blocks/_main-footer.scss
+++ b/src/scss/blocks/_main-footer.scss
@@ -1,7 +1,7 @@
 .main-footer {
   box-shadow: 0 5px 50px 10px #f4f4f4;
   padding: 40px 0;
-  background-color: #fff;
+  background-color: #f2f2f2;
   position: relative;
   z-index: 11;
 }
@@ -30,6 +30,17 @@
   font-weight: 600;
   color: $color-dark-blue;
   margin-bottom: 30px;
+  &--social {
+    @media (max-width: 576px) {
+      display: block;
+    }
+    .main-footer__social-title {
+      @media (max-width: 576px) {
+        margin-bottom: 10px;
+        display: block;
+      }
+    }
+  }
   @media (max-width: 576px) {
     font-size: 18px;
     margin-bottom: 14px;
@@ -41,7 +52,9 @@
   a {
     color: $color-text;
     &:hover {
-      color: $color-red;
+      @media (min-width: 768px) {
+        color: $color-red;
+      }
     }
   }
   @media (max-width: 576px) {
@@ -56,7 +69,9 @@
     color: $color-dark-blue;
     font-weight: 600;
     &:hover {
-      color: $color-red;
+      @media (min-width: 768px) {
+        color: $color-red;
+      }
     }
   }
 }
@@ -74,40 +89,50 @@
     a.email {
       background-image: url("../images/socials/email.svg");
       &:hover {
-        opacity: 0.75;
-        background-image: url("../images/socials/email-hover.svg");
+        @media (min-width: 768px) {
+          opacity: 0.75;
+          background-image: url("../images/socials/email-hover.svg");
+        }
       }
     }
     a.fb {
       background-image: url("../images/socials/fb.svg");
+      &:active {
+        background-image: url("../images/socials/fb.svg");
+      }
       &:hover {
-        opacity: 0.75;
-        background-image: url("../images/socials/fb-hover.svg");
+        @media (min-width: 768px) {
+          opacity: 0.75;
+          background-image: url("../images/socials/fb-hover.svg");
+        }
       }
     }
     a.vk {
       background-image: url("../images/socials/vk.svg");
       &:hover {
-        opacity: 0.75;
-        background-image: url("../images/socials/vk-hover.svg");
+        @media (min-width: 768px) {
+          opacity: 0.75;
+          background-image: url("../images/socials/vk-hover.svg");
+        }
       }
     }
     a.inst {
       background-image: url("../images/socials/inst.svg");
       &:hover {
-        opacity: 0.75;
-        background-image: url("../images/socials/inst-hover.svg");
+        @media (min-width: 768px) {
+          opacity: 0.75;
+          background-image: url("../images/socials/inst-hover.svg");
+        }
       }
     }
   }
   @media (max-width: 576px) {
-    justify-content: flex-end;
     padding-top: 0;
   }
 }
 
-.main-footer__social-title {
-  @media (max-width: 576px) {
-    display: none;
-  }
-}
+// .main-footer__social-title {
+//   @media (max-width: 576px) {
+//     display: none;
+//   }
+// }
