--- a/src/scss/blocks/_about-me.scss
+++ b/src/scss/blocks/_about-me.scss
@@ -90,8 +90,7 @@
 				display: block;
 				position: absolute;
 				left: 0;
-				top: 50%;
-				margin-top: -4px;
+				top: 8px;
 				width: 8px;
 				height: 8px;
 				background-color: $color-dark-blue;
