--- a/src/index.pug
+++ b/src/index.pug
@@ -461,13 +461,15 @@ block content
 			li
 				a(href="#anchor1") Главная
 			li
-				a(href="#anchor2") Направления
+				a(href="#anchor2") Услуги
 			li
 				a(href="#anchor3") Результаты
 			li
 				a(href="#anchor4") Обо мне
 			li
 				a(href="#anchor5") Отзывы
+			li
+				a(href="#anchor7") Направления
 			li
 				a(href="#anchor6") Контакты
 			li
